--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "dependencies": {
     "@hookform/resolvers": "^2.7.1",
     "@material-ui/core": "^4.12.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
@@ -44,6 +42,12 @@
     ]
   },
   "devDependencies": {
-    "msw": "^0.34.0"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "expect": "^26.6.2",
+    "history": "^4.10.1",
+    "jest-dom": "^4.0.0",
+    "msw": "^0.34.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
